# acquisition-leadgen-engine

./: .dockerignore  .env.example  .gitignore  DEMO_SETUP.md  Dockerfile  LIVE_DEMO_GUIDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
app/: __init__.py  main.py
app/api/: analytics.py  enrichment.py  leads.py  webhooks.py
app/core/: config.py  database.py
app/integrations/: __init__.py  hubspot_integration.py  salesforce_integration.py
app/models/: __init__.py  activity.py  company.py  lead.py
app/schemas/: enrichment.py  lead.py
app/services/: analytics_service.py  enrichment_service.py  lead_service.py  scoring_service.py  webhook_service.py
scripts/: demo_page.html  demo_script.sh  postman_collection.json  seed_demo_data.py
tests/: __init__.py  conftest.py  test_enrichment.py  test_leads.py  test_scoring.py
